@@ -10,6 +10,8 @@ Version 1.7.1+svn:
   * Language and translations
     * Updated translations: Finnish, German, Lithuanian, Polish, Serbian.
 
+  * User interface
+    * Add an icon to show whether or not the user finished a campaign.
 
 Version 1.7.1:
   * Campaigns
