@@ -4,6 +4,8 @@ Version 1.7.1+svn:
     * New portrait for female Footpad.
  * Language and i18n:
    * Updated translations: Finnish, German, Lithuanian, Polish, Serbian
+ * User interface:
+   * Add an icon to show whether or not the user finished a campaign
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
